welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: not found: value lettre
lettre match {
^BDR2:4: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "A") => avance()
         ^BDR2:5: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "B")
        ^BDR2:8: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "C")
        ^BDR2:12: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "R")
        ^BDR2:15: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "L")
        ^BDR2:18: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "I")
        ^BDR2:21: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "Z")
        ^BDR2:23: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "Y")
        ^BDR2:26: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "X") => recule();recule();recule()
         ^BDR2:27: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "F") 
         ^BDR2:34: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "E") 
         ^BDR2:41: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "D") 
         ^BDR2:46: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "W") => recule();recule();recule();recule()	
         ^BDR2:47: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "V") => recule();recule();recule();recule();recule()
         ^BDR2:48: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "U") => recule();recule();recule();recule();recule();recule()		
         ^