welcome.lessons.welcome.bdr.BDR2.scala.code
var lM = litMessage() 
lettre match {
	
case (lM == "A") => avance()
case(lM == "B")
	=>	avance()
		avance()
case(lM == "C")
	=>	avance()
		avance()
		avance()
case(lM == "R")
	=>	droite()
		avance()
case(lM == "L")
=>		gauche()
		avance()
case(lM == "I")
=>		retourne()
		avance()
case(lM == "Z")
=>		recule()
case(lM == "Y")
=>		recule()
		recule()
case (lM == "X") => recule();recule();recule()
case (lM == "F") 
=>		avance()
		avance()
		avance()
		avance()
		avance()
		avance()
case (lM == "E") 
=>		avance()
		avance()
		avance()
		avance()
		avance()
		
case (lM == "D") 
=>		avance()
		avance()
		avance()
		avance()
case (lM == "W") => recule();recule();recule();recule()	
case (lM == "V") => recule();recule();recule();recule();recule()
case (lM == "U") => recule();recule();recule();recule();recule();recule()		
	}